kubernetes/apps/default/kokoro-fastapi/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kokoro-fastapi
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: external.enchantednatures.com
    external-dns/is-public: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: external
  rules:
    - host: &host kokoro-fastapi.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kokoro-fastapi
                port:
                  number: 8880
  tls:
    - hosts:
        - *host
      secretName: kokoro-tls
